# fittrackee-uploader

./: .codespell-ignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
fittrackee-uploader/: __init__.py  __main__.py  configuration.py  fit.py  fittrackee.py  login.py  options.py  templates.py  uploader.py  workout.py
fittrackee-uploader/ui/: convert.sh  login.py  login.ui  main.py  main.ui  options.py  options.ui
fittrackee-uploader/workout/: fit.py  gpx.py  loader.py  workout.py
fittrackee_uploader/: __init__.py  login.py  options.py  templates.py  uploader.py
fittrackee_uploader/ui/: convert.sh  login.py  login.ui  main.ui  options.ui
fittrackee_uploader/workout/: fit.py  gpx.py  loader.py
